<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="65dp"
        android:layout_height="58dp"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:text="@string/_9_8"
        android:textAlignment="center"
        android:textColor="#70000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="65dp"
        android:layout_height="58dp"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:text="@string/_178"
        android:textAlignment="center"
        android:textColor="#70000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <Button
        android:id="@+id/button44"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="148dp"
        android:layout_height="50dp"
        android:text="@string/portfolio"
        android:textColor="#E710D1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#E5E5E5"
        app:layout_constraintEnd_toEndOf="@+id/textView22"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/textView22"
        app:strokeColor="#3B3B98" />



    <Button
        android:id="@+id/button445"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="148dp"
        android:layout_height="50dp"
        android:text="@string/hire_me"
        android:textColor="#06896A"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#E5E5E5"
        app:strokeColor="#3B3B98"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="580dp"
        app:layout_constraintEnd_toEndOf="@+id/textView24"
        app:layout_constraintStart_toStartOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/textView24"/>

    <TextView
        android:id="@+id/textView22"
        android:layout_width="72dp"
        android:layout_height="39dp"
        android:gravity="center_horizontal"
        android:text="@string/rating"
        android:textAlignment="center"
        android:textColor="#70000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView21"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="87dp"
        android:layout_height="39dp"
        android:gravity="center_horizontal"
        android:text="@string/projects"
        android:textAlignment="center"
        android:textColor="#70000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <View
        android:id="@+id/view3"
        android:layout_width="412dp"
        android:layout_height="223dp"
        android:background="#51AC54"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view4"
        android:layout_width="368dp"
        android:layout_height="329dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/bg3a2"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="335dp"
        android:layout_height="97dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/donald_trump_is_closely_associated_with_n_the_sport_of_golf_as_a_real_estate_n_developer_trump_began_acquiring_and_n_constructing_golf_courses_in_1999"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/full_stack_developer_android_ui"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="256dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:text="@string/new_york_usa"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="172dp"
        android:layout_height="46dp"
        android:gravity="center_horizontal"
        android:text="@string/donal_trump"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="147dp"
        android:layout_height="138dp"
        android:layout_marginBottom="244dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:srcCompat="@drawable/donatrum" />

</androidx.constraintlayout.widget.ConstraintLayout>